chenges in the introduction

--- a/main.tex
+++ b/main.tex
@@ -166,10 +166,12 @@ We aim to reproduce basic properties of the electronic structure of the sp$^2$ c
 
 difference from the HALOGENES
 
-The originality and difficulty of this work resides in the ambition to extract pseudo-potentials,
-which not only could be used in a QM/MM framework but also used by themselves could
-interact in a physically sound manner and reproduce accurately some molecular properties.
-For instance, in this article, we reproduce on the $\pi$ system and selected properties 
+The originality and difficulty of this work resides in the ambition to extract pseudo-potentials
+for systems which are not isotropic (hybridized atoms),
+and interact in a physically sound manner to reproduce accurately some molecular properties.
+This is a major difference with the pseudo-potential based methods, which aim at filling the valency
+of an atom (as it is done in the link atom variations).
+In this article, we reproduce the $\pi$ system and selected properties 
 of various molcules with no $\sigma$ electrons treated explicitely.
 
 This article is structured as follows.
